--- a/WeatherForecast/gradle/wrapper/gradle-wrapper.properties
+++ b/WeatherForecast/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Mon Sep 25 12:34:22 EEST 2017
+#Sat Oct 07 20:35:59 EEST 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.13-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-2.13-bin.zip
