--- a/WeatherForecast/gradle/wrapper/gradle-wrapper.properties
+++ b/WeatherForecast/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Wed Oct 18 15:49:10 EEST 2017
+#Sun Nov 05 20:51:21 EET 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
